関数の削除

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </table>
 ​
   <h2>新規タスクの追加</h2>
-  <input id="inputTask" type="text">
+  <input id="inputTask" type="text" value="">
   <button id ="addButton" type="button">追加</button>
 <script src = "main.js"></script>
 </body>
