--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 ​
   <table>
-    <tr>
+    <thead>
       <th>ID</th>
       <th>コメント</th>
       <th>状態</th>
       <th>削除</th>
-    </tr>
+    </thead>
     <tbody id = "todo-list"></tbody>
   </table>
 ​
   <h2>新規タスクの追加</h2>
-  <input id="inputTask" type="text" value="">
+  <input id="inputTask" type="text" value=" ">
   <button id ="addButton" type="button">追加</button>
 <script src = "main.js"></script>
 </body>
