--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <h1>Todoリスト</h1>
-  <input id="allBtn" type="radio" name="status" value="1" checked="checked">すべて
-  <input id="workingBtn" type="radio" name="status" value="2">作業中
-  <input id="doneBtn" type="radio" name="status" value="3">完了
+  <input id="allBtn" type="radio" name="state" value="1" checked="checked">すべて
+  <input id="workingBtn" type="radio" name="state" value="2">作業中
+  <input id="doneBtn" type="radio" name="state" value="3">完了
 
 ​
   <table>
