--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </head>
 <body>
   <h1>Todoリスト</h1>
-  <input id="allBtn" type="radio" name="state" value="1" checked="checked">すべて
-  <input id="workingBtn" type="radio" name="state" value="2">作業中
-  <input id="doneBtn" type="radio" name="state" value="3">完了
+  <input id="allBtn" type="radio" name="status" value="1" checked="checked">すべて
+  <input id="workingBtn" type="radio" name="status" value="2">作業中
+  <input id="doneBtn" type="radio" name="status" value="3">完了
 
 ​
   <table>
     <thead>
-      <th>ID</th>
+      <th id = 'id'>ID</th>
       <th>コメント</th>
       <th>状態</th>
       <th>削除</th>
